--- a/app/css/style.css
+++ b/app/css/style.css
@@ -2,27 +2,15 @@ body {
 	padding-top: 20px;
 }
 
-.videos {
+.todo-list {
 	list-style: none;
 	margin-top: 20px;
 }
 
-.thumb {
-	float: left;
-	margin: -0.5em 1em 0.5em 0;
-	padding-bottom: 1em;
-	height: 80px;
-	width: 100px;
-}
-
-.videos li {
-	clear: both;
-	height: 115px;
-	padding-top: 15px;
-}
-
-form {
-	padding: 20px;
+.todo-list li {
+	padding: 10px;
+	margin: 10px;
+	border: 1px solid #000;
 }
 
 form .controls-box {
@@ -44,10 +32,18 @@ form .input-box {
 	margin-top: 20px;
 }
 
-.video-list {
+.todo {
 	padding: 20px 0;
 }
 
 footer {
 	text-align: center;
+}
+
+.todo-row {
+	margin-bottom: 20px;
+}
+
+.true {
+	font-weight: normal;
 }
